--- a/Middle Logo/index.html
+++ b/Middle Logo/index.html
@@ -19,6 +19,18 @@
         <li class="nav-item">Contact</li>
         <li class="nav-item">Login</li>
       </ul>
+      <div class="mobile-nav">
+        <div class="mobile-logo"><img src="SubiroLogo.png" /></div>
+        <ul>
+          <li class="mobile-nav-item sandwich">MENU</li>
+          <li class="mobile-nav-item">Blog</li>
+          <li class="mobile-nav-item">Products</li>
+          <li class="mobile-nav-item">Store</li>
+          <li class="mobile-nav-item">About</li>
+          <li class="mobile-nav-item">Contract</li>
+          <li class="mobile-nav-item">Login</li>
+        </ul>
+      </div>
     </header>
   </body>
 </html>
