--- a/Middle Logo/index.html
+++ b/Middle Logo/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/queries.css" />
     <link rel="stylesheet" href="css/main.css" />
+
+    <script
+      src="https://kit.fontawesome.com/9c3c553c69.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Middle Logo Nav</title>
   </head>
   <body>
@@ -21,16 +26,27 @@
       </ul>
       <div class="mobile-nav">
         <div class="mobile-logo"><img src="SubiroLogo.png" /></div>
-        <ul>
-          <li class="mobile-nav-item sandwich">MENU</li>
-          <li class="mobile-nav-item">Blog</li>
-          <li class="mobile-nav-item">Products</li>
-          <li class="mobile-nav-item">Store</li>
-          <li class="mobile-nav-item">About</li>
-          <li class="mobile-nav-item">Contract</li>
-          <li class="mobile-nav-item">Login</li>
+        <ul class="sandwich-menu">
+          <div class="mobile-nav-item sandwich-btn">
+            <i class="far fa-caret-square-down"></i>
+          </div>
+          <div class="mobile-drawer-items">
+            <a href="#"><li class="mobile-nav-item">Blog</li></a>
+            <a href="#"><li class="mobile-nav-item">Products</li></a>
+            <a href="#"><li class="mobile-nav-item">Store</li></a>
+            <a href="#"><li class="mobile-nav-item">About</li></a>
+            <a href="#"><li class="mobile-nav-item">Contract</li></a>
+            <a href="#"><li class="mobile-nav-item">Login</li></a>
+          </div>
         </ul>
       </div>
     </header>
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
